--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
   <!-- Background music -->
-  <audio id="bgMusic" loop preload="auto">
-  <source src="./audio/love.mp3" type="audio/mpeg">
+ <audio id="bgMusic" loop preload="auto" controls>
+
 </audio>
 
 
